# rust-learn-axum

./: .gitignore  Cargo.toml  README.md
prisma/: core.prisma
src/: app.rs  db.rs  error.rs  main.rs
src/middlewares/: auth.rs
src/routes/: auth.rs  user.rs
src/utils/: funcs.rs  jwt.rs
