[package]
name = "rust_learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { verson = "0.6.4", features = ["headers"] } 
axum-extra = { verson = "0.6.0", features = ["cookie"] } 
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
tokio = { version = "1.24.2", features = ["full"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4" }
tower-http = { version = "0.3.5", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
] }
http = "0.2.8"
tracing = "0.1.37"
bcrypt = "0.14.0"
tracing-subscriber = "0.3.16"
jsonwebtoken = "8.2.0"
uuid = { version = "1.3.0", features = ["serde", "v1", "v4"] }
chrono = { version =  "0.4.23", features = ["serde"] }
thiserror = "1.0.38"
utoipa = { version = "3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3", features = ["axum"] }